@@ -10,6 +10,7 @@ ChangeLog about GNU GLOBAL
 ********* 2000, Shigio Yamaguchi  <shigio@tamacom.com>
 
 	* config variable HAVE_SNPRINTF and AC_FUNC_ALLOCA added.
+	* stop using MAXENVLEN because it brings buffer overflow.
 	* htags.pl: the value of id changed from src directory
 	  to HTML directory.
 	* libutil/conf.c: error check added.
